# first_meeting_fastapi

./: db.sqlite3  items_views.py  main.py  pyproject.toml
api_v1/products/: crud.py  views.py
core/: config.py
core/models/: base.py  db_helper.py  product.py
users/: crud.py  schemas.py  views.py
